# meta-hackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  action_processor.py  app.py  baseline_detector.py  client.py  constants.py  episode_grades.csv  evaluate.py  grading_engine.py  grpo_dryrun.py  grpo_train.py  hackathon-blog.md  hidden_world_state.py  inference.py  models.py  observation_generator.py  openenv.yaml  policy_networks.py  ppo_trainer.py  pyproject.toml  reward_engine.py  rollout_history.csv  scenario_generator.py  termination_engine.py  train.py  train_grpo.py  transition_engine.py
server/: app.py  fraud_environment.py
tests/: run_smoke.py  test_smoke.py  verify_grpo.py
